[package]
name = "esp_box_tt21100_example"
version = "0.1.0"
authors = ["sambenko <sam.benko@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32s3-hal", version = "0.13.0" }
esp-backtrace = { version = "0.9.0", features = ["esp32s3", "panic-handler", "exception-handler", "print-uart"] }
esp-println       = { version = "0.7.1", features = ["esp32s3"] }
tt21100 = {git = "https://github.com/jessebraham/tt21100.git"}
critical-section   = "1.1.2"
display-interface-spi = "0.4"
mipidsi = "0.7.1"
embedded-graphics = "0.8.1"